# project_template

./: .gitignore  LICENSE  README.md
app/: CMakeLists.txt
app/src/: app.c
components/business/move/: CMakeLists.txt
components/business/move/include/: move.h
components/business/move/src/: move.c  move_internal.h
components/business/work/: CMakeLists.txt
components/business/work/include/: work.h
components/business/work/src/: work.c  work_internal.h
components/common/cjson/: CMakeLists.txt
components/common/cjson/include/: cjson.h
components/common/cjson/src/: cjson.c  cjson.cpp  cjson_internel.h
components/common/cjson/test/: CMakeLists.txt  test_cjson.cpp
components/common/cli/: CMakeLists.txt
components/common/cli/include/: cli.h
components/common/cli/src/: cli.c  cli_internal.h
components/common/cli/test/: CMakeLists.txt
components/module/upg/: CMakeLists.txt
components/module/upg/include/: upg.h
components/module/upg/src/: upg_internal.h
components/module/upg/test/: CMakeLists.txt
components/modules/upg/: CMakeLists.txt
components/modules/upg/src/: upg.c  upg_internal.h
rules/: custom_define.cmake  functions.cmake
rules/cmake/: aarch64-linux-gnu.toolchain.cmake  arm-linux-gnueabihf.toolchain.cmake
